--- a/index.html
+++ b/index.html
@@ -40,46 +40,43 @@
 
     <div class="section2">
         <h1 class="s2h1">This is random info</h1>
-        <div class="boxes">
-            <div class="box">
-                <div class="b1container">
-                    <img src="" alt="Placeholder" class="s2boximg">
-                </div>
 
-            </div>
-            <h5 class="b1info">Placeholder Text</h5>
-
+       <div class="boxes">
+        <div class="box">
+          <div class="b1container">
+            <img
+              src="images/engagementpic.jpg"
+              alt="Placeholder"
+              class="s2boximg"
+            />
+          </div>
+          <h5 class="b1info">Placeholder Text</h5>
         </div>
-        <div class="boxes">
-            <div class="box">
-                <div class="b1container">
-                    <img src="" alt="Placeholder" class="s2boximg">
-                </div>
-
-            </div>
-            <h5 class="b1info">Placeholder Text</h5>
-
+        <div class="box">
+          <div class="b1container">
+            <img src="images/dog.jpg" alt="Placeholder" class="s2boximg" />
+          </div>
+          <h5 class="b1info">
+            Placeholder Text
+          </h5>
         </div>
-        <div class="boxes">
-            <div class="box">
-                <div class="b1container">
-                    <img src="" alt="Placeholder" class="s2boximg">
-                </div>
-
-            </div>
-            <h5 class="b1info">Placeholder Text</h5>
-
+        <div class="box">
+          <div class="b1container">
+            <img src="images/hike.jpg" alt="Placeholder" class="s2boximg" />
+          </div>
+          <h5 class="b1info">Placeholder Text</h5>
         </div>
-        <div class="boxes">
-            <div class="box">
-                <div class="b1container">
-                    <img src="" alt="Placeholder" class="s2boximg">
-                </div>
-
-            </div>
-            <h5 class="b1info">Placeholder Text</h5>
-
+        <div class="box">
+          <div class="b1container">
+            <img
+              src="images/london.jpg"
+              alt="Placeholder"
+              class="s2boximg"
+            />
+          </div>
+          <h5 class="b1info">Placeholder Text</h5>
         </div>
+      </div>
     </div>
 
     <div class="section3">
