--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <div class="section3">
         <h3 class="s3h3">This is a quote</h3>
-        <h4 class="s3h4">Loki, God of Mischief</h4>
+        <h4 class="s3h4">-Loki, God of Mischief</h4>
     </div>    
 
     <div class="section4">
