Add images and change header

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 
 
 <body>
+
     <div class="header">
-        <div class="headerlogo"><a href="" class="hl">Coding With Maug</a></div>
+        <div class="headerlogo"><a href="" class="hl">Maugers Kitchen</a></div>
         <div class="links">
-            <span class="hlink"><a href="" class="hl">Header Link 1</a></span>
-            <span class="hlink"><a href="" class="hl">Header Link 2</a></span>
-            <span class="hlink"><a href="" class="hl">Header Link 3</a></span>
+            <span class="hlink"><a href="" class="hl">Home</a></span>
+            <span class="hlink"><a href="" class="hl">English Chicken Curry</a></span>
+            <span class="hlink"><a href="" class="hl">Blackbean Stir-Fry</a></span>
+            <span class="hlink"><a href="" class="hl">Dauphinois Potatoes</a></span>
         </div>
     </div>
 
@@ -34,7 +36,7 @@
 
         </div>
         <div class="s1imgdiv">
-            <img src="" alt="Placeholder" class="s1img">
+            <img src="chef2.jpg" alt="A photo of a cartoon chef" class="s1img">
         </div>
     </div>
 
@@ -45,31 +47,31 @@
         <div class="box">
           <div class="b1container">
             <img
-              src="images/engagementpic.jpg"
-              alt="Placeholder"
+              src="curry.jpg"
+              alt="English Chicken Curry"
               class="s2boximg"
             />
           </div>
-          <h5 class="b1info">Placeholder Text</h5>
+          <h5 class="b1info">English Chicken Curry</h5>
         </div>
         <div class="box">
           <div class="b1container">
-            <img src="images/dog.jpg" alt="Placeholder" class="s2boximg" />
+            <img src="chinese.jpg" alt="Blackbean Stir-Fry" class="s2boximg" />
           </div>
           <h5 class="b1info">
-            Placeholder Text
+            Blackbean Stir-Fry
           </h5>
         </div>
         <div class="box">
           <div class="b1container">
-            <img src="images/hike.jpg" alt="Placeholder" class="s2boximg" />
+            <img src="potatoe.jpg" alt="Placeholder" class="s2boximg" />
           </div>
           <h5 class="b1info">Placeholder Text</h5>
         </div>
         <div class="box">
           <div class="b1container">
             <img
-              src="images/london.jpg"
+              src="tick.jpg"
               alt="Placeholder"
               class="s2boximg"
             />
