--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     <div class="section1">
         <div class="s1text">
-            <h1 class="s1h1">This website is awesome</h1>
-            <h4 class="s1h4">This is some text</h4>
+            <h1 class="s1h1">100% Verified Gourmet Food</h1>
+            <h4 class="s1h4">If these images make your mouth water then follow the links and learn to cook these delicious recipes for yourself!</h4>
             
 
         </div>
@@ -41,7 +41,7 @@
     </div>
 
     <div class="section2">
-        <h1 class="s2h1">This is random info</h1>
+        <h1 class="s2h1">Take a closer look</h1>
 
        <div class="boxes">
         <div class="box">
@@ -64,26 +64,26 @@
         </div>
         <div class="box">
           <div class="b1container">
-            <img src="potatoe.jpg" alt="Placeholder" class="s2boximg" />
+            <img src="potatoe.jpg" alt="Potatoes" class="s2boximg" />
           </div>
-          <h5 class="b1info">Placeholder Text</h5>
+          <h5 class="b1info">Daulphinois Potatoes</h5>
         </div>
         <div class="box">
           <div class="b1container">
             <img
               src="tick.jpg"
-              alt="Placeholder"
+              alt="verified"
               class="s2boximg"
             />
           </div>
-          <h5 class="b1info">Placeholder Text</h5>
+          <h5 class="b1info">All our recipes are verified</h5>
         </div>
       </div>
     </div>
 
     <div class="section3">
-        <h3 class="s3h3">This is a quote</h3>
-        <h4 class="s3h4">-Loki, God of Mischief</h4>
+        <h3 class="s3h3">"A recipe has no soul, you as the cook must bring the soul to the recipe"</h3>
+        <h4 class="s3h4">-Big Cook, Little Cook</h4>
     </div>    
 
     <div class="section4">
@@ -97,7 +97,7 @@
     </div>
 
     <div class="footer">
-        Not really Copyrighted @ Coding with Maug 2022
+        Not really Copyrighted @ Maugers Kitchen 2022
     </div>
 </body>
 </html>
